All sidebars moved to fragments

--- a/src/main/resources/templates/SearchBarView.html
+++ b/src/main/resources/templates/SearchBarView.html
@@ -20,112 +20,7 @@
 
 <body>
 <!--======== Navbar =======-->
-<div class="top-bar">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="navbar-menu-left-side239">
-          <ul>
-            <li><a href="mailto:telerikforums@gmail.com">
-              <i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a>
-            </li>
-            <li><a href="#">
-              <i class="fa fa-headphones" aria-hidden="true"></i>Support</a>
-            </li>
-            &nbsp;
-            <li th:if="${session.currentUser} != null">
-              <!-- If the user is logged in, display the link to edit their profile -->
-              <a th:href="@{/users/profile}">
-                <i class="fa fa-user" aria-hidden="true"></i>&nbsp;
-                <span th:text="${session.currentUser}"></span>
-              </a>
-            </li>
-            &nbsp;
-            <li><a th:href="@{/auth/logout}" th:if="${session.currentUser} != null">
-              <i class="fa fa-sign-out" aria-hidden="true"></i>Logout
-            </a>
-              <!-- If the currentUser session attribute is null, display the login link -->
-              <a th:href="@{/auth/login}" th:if="${session.currentUser} == null">
-                <i class="fa fa-user" aria-hidden="true"></i>&nbsp;Login Area
-              </a>
-            </li>
-
-
-          </ul>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="navbar-serch-right-side">
-          <form class="navbar-form" role="search" action="/search/" method="get">
-            <div class="input-group add-on">
-              <label for="search"></label>
-              <input class="form-control form-control222" placeholder="Search" id="search" name="search" type="text">
-              <div class="input-group-btn">
-                <button class="btn btn-default btn-default2913" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-              </div>
-            </div>
-          </form>
-        </div>
-
-
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-<!-- ==========header mega navbar=======-->
-<div class="top-menu-bottom932">
-  <nav class="navbar navbar-default">
-    <div class="container">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-        <a class="navbar-brand" href="#" th:href="@{/}"><img src="/assets/img/flogo.png" alt="FLogo"></a>
-      </div>
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav"> </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#" th:href="@{/}">Home</a></li>
-          <li th:if="${session.currentUser != null}"><a href="#" th:href="@{/topics/new}">Ask Question</a></li>
-          <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Question <span class="caret"></span></a>
-            <ul class="dropdown-menu animated zoomIn">
-              <li><a href="category.html">Question Category</a></li>
-              <li><a href="category.html">HTML</a></li>
-              <li><a href="category.html">CSS</a></li>
-              <li><a href="category.html">Javascript</a></li>
-              <li><a href="category.html">Bootstrap</a></li>
-            </ul>
-          </li>
-
-          <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                  aria-haspopup="true" aria-expanded="false">Blog <span class="caret"></span></a>
-            <ul class="dropdown-menu animated zoomIn">
-              <li><a href="blog.html">Blog </a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                  aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
-            <ul class="dropdown-menu animated zoomIn">
-              <li th:if="${session.currentUser} == null"><a href="#" th:href="@{/auth/login}" th:text="#{navigation.login}">Login</a></li>
-
-              <li th:if="${session.currentUser} != null"><a href="#" th:href="@{/topics/new}" th:text="#{navigation.create_topic}"> Ask Question </a></li>
-              <li th:if="${session.currentUser} != null"><a href="#" th:href="@{/topics}" th:text="#{navigation.list_all_topics}"> List all topics </a></li>
-              <li th:if="${session.currentUser} != null"><a href="#" th:href="@{/users}" th:text="#{navigation.list_all_users}">List all users</a></li>
-              <li th:if="${session.currentUser} != null"><a href="#" th:href="@{/tags}" th:text="#{navigation.list_all_tags}"> List all tags </a></li>
-              <li><a href="#" th:href="@{/contact_us}" th:text="#{navigation.contact_us}"> Contact Us</a></li>
-            </ul>
-          </li>
-          <li><a href="#" th:href="@{/contact_us}" th:text="#{navigation.contact_us}">Contact us</a></li>
-        </ul>
-      </div>
-      <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container-fluid -->
-  </nav>
-</div>
+<div th:replace="fragments/navbar :: navbar"></div>
 
 
 <!--======= welcome section on top background=====-->
