--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+<!--======== Navbar =======-->
 <div th:replace="fragments/navbar :: navbar"></div>
 
 <!--======= welcome section on top background=====-->
@@ -337,156 +338,16 @@
                 </div>
             </div>
             <!--end of col-md-9 -->
-            <!--strart col-md-3 (side bar)-->
             <aside class="col-md-3 sidebar97239">
-                <div class="status-part3821">
-                    <h4>Forum statistics</h4>
-                    <a href="#"><i class="fa fa-question-circle" aria-hidden="true"
-                                   th:text="' Active Topics: ' + ${allTopics.size()}"> </i></a>
-                    <i class="fa fa-comment" aria-hidden="true"
-                       th:text="' Registered Users: ' + ${allUsers.size()}"> </i></div>
+                <!-- forum stats part-->
+                <div th:replace="fragments/stats_sidebar :: stats"></div>
                 <!--             social part -->
-                <div class="social-part2189">
-                    <h4>Find us</h4>
-                    <ul> <!-- Wrap the li elements inside a ul element -->
-                        <li class="rss-one">
-                            <a href="#" target="_blank"> <strong>
-                                <span>Subscribe</span>
-                                <i class="fa fa-rss" aria-hidden="true"></i>
-
-                                <br>
-                                <small>To RSS Feed</small>
-
-                            </strong> </a>
-                        </li>
-                        <li class="facebook-two">
-                            <a href="https://www.facebook.com/profile.php?id=100095611680778" target="_blank"> <strong>
-                                <span>Follow us on</span>
-                                <i class="fa fa-facebook" aria-hidden="true"></i>
-
-                                <br>
-                                <small>Facebook</small>
-
-                            </strong> </a>
-                        </li>
-                        <li class="twitter-three">
-                            <a href="#" target="_blank"> <strong>
-                                <span>Subscribe</span>
-                                <i class="fa fa-twitter" aria-hidden="true"></i>
-
-                                <br>
-                                <small>To twitter Feed</small>
-
-                            </strong> </a>
-                        </li>
-                        <li class="youtube-four">
-                            <a href="#" target="_blank"> <strong>
-                                <span>Subscribe</span>
-                                <i class="fa fa-youtube" aria-hidden="true"></i>
-
-                                <br>
-                                <small>To youtube Feed</small>
-
-                            </strong> </a>
-                        </li>
-                    </ul>
-                </div>
-
-                <!--              login part-->
-                <div class="login-part2389">
-                    <h4>Login</h4>
-                    <div class="input-group300"><span><i class="fa fa-user" aria-hidden="true"></i></span>
-                        <label>
-                            <input type="text" class="namein309" placeholder="Username">
-                        </label></div>
-                    <div class="input-group300"><span><i class="fa fa-lock" aria-hidden="true"></i></span>
-                        <label>
-                            <input type="password" class="passin309" placeholder="Name">
-                        </label></div>
-                    <a href="#" th:href="@{/login}">
-                        <button type="button" class="userlogin320">Log In</button>
-                    </a>
-                    <div class="rememberme">
-                        <label>
-                            <input type="checkbox" checked="checked"> Remember Me</label> <a href="#"
-                                                                                             th:href="@{/users/new}"
-                                                                                             class="resbutton3892">Register</a>
-                    </div>
-                </div>
+                <div th:replace="fragments/social_sidebar :: social"></div>
                 <!--              highest part-->
-                <div class="highest-part302">
-                    <h4>Highest Points</h4>
-                    <div class="pints-wrapper">
-                        <div class="left-user3898">
-                            <a href="#"><img src="/assets/img/images.png" alt="Image"></a>
-                            <div class="imag-overlay39"><a href="#"><i class="fa fa-plus" aria-hidden="true"></i></a>
-                            </div>
-                        </div>
-                        <span class="points-details938">
-<a href="#"><h5>Ahmed Hasan</h5></a>
-<a href="#" class="designetion439">Pundit</a>
-<p>206 points</p>
-</span></div>
-                    <hr>
-                    <div class="pints-wrapper">
-                        <div class="left-user3898">
-                            <a href="#"><img src="/assets/img/images.png" alt="Image"></a>
-                            <div class="imag-overlay39"><a href="#"><i class="fa fa-plus" aria-hidden="true"></i></a>
-                            </div>
-                        </div>
-                        <span class="points-details938">
-<a href="#"><h5>Ahmed Hasan</h5></a>
-<a href="#" class="designetion439">Pundit</a>
-<p>206 points</p>
-</span></div>
-                    <hr>
-                    <div class="pints-wrapper">
-                        <div class="left-user3898">
-                            <a href="#"><img src="/assets/img/images.png" alt="Image"></a>
-                            <div class="imag-overlay39"><a href="#"><i class="fa fa-plus" aria-hidden="true"></i></a>
-                            </div>
-                        </div>
-                        <span class="points-details938">
-<a href="#"><h5>Ahmed Hasan</h5></a>
-<a href="#" class="designetion439">Pundit</a>
-<p>206 points</p>
-</span></div>
-                    <hr>
-                    <div class="pints-wrapper">
-                        <div class="left-user3898">
-                            <a href="#"><img src="/assets/img/images.png" alt="Image"></a>
-                            <div class="imag-overlay39"><a href="#"><i class="fa fa-plus" aria-hidden="true"></i></a>
-                            </div>
-                        </div>
-                        <span class="points-details938">
-<a href="#"><h5>Ahmed Hasan</h5></a>
-<a href="#" class="designetion439">Pundit</a>
-<p>206 points</p>
-</span></div>
-                    <hr>
-                    <div class="pints-wrapper">
-                        <div class="left-user3898">
-                            <a href="#"><img src="/assets/img/images.png" alt="Image"></a>
-                            <div class="imag-overlay39"><a href="#"><i class="fa fa-plus" aria-hidden="true"></i></a>
-                            </div>
-                        </div>
-                        <span class="points-details938">
-<a href="#"><h5>Ahmed Hasan</h5></a>
-<a href="#" class="designetion439">Pundit</a>
-<p>206 points</p>
-</span></div>
-                </div>
+                <div th:replace="fragments/top_users_sidebar :: topusers"></div>
                 <!--               end of Highest points -->
                 <!--          start tags part-->
-                <div class="tags-part2398">
-                    <h4>Tags</h4>
-                    <ul>
-                        <li th:each="tag : ${tags}">
-                            <a href="#" th:href="@{/tags/{id}(id=${tag.getId()})}" th:text="${tag.getName()}"></a>
-                        </li>
-                    </ul>
-                </div>
-                <hr>
+                <div th:replace="fragments/tags_sidebar :: sidetags"></div>
                 <!--          End tags part-->
             </aside>
         </div>
