--- a/src/main/resources/templates/contact_us.html
+++ b/src/main/resources/templates/contact_us.html
@@ -19,94 +19,7 @@
 </head>
 
 <body>
-<div class="top-bar">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="navbar-menu-left-side239">
-                    <ul>
-                        <li><a href="mailto:telerikforums@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-headphones" aria-hidden="true"></i>Support</a></li>
-                        <li><a href="#" th:href="@{/logIn}"><i class="fa fa-user" aria-hidden="true"></i>Login Area</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="navbar-serch-right-side">
-                    <form class="navbar-form" role="search">
-                        <div class="input-group add-on">
-                            <input class="form-control form-control222" placeholder="Search" name="srch-term"
-                                   id="srch-term" type="text">
-                            <div class="input-group-btn">
-                                <button class="btn btn-default btn-default2913" type="submit"><i
-                                        class="glyphicon glyphicon-search"></i></button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-
-            </div>
-        </div>
-    </div>
-</div>
-<div class="top-menu-bottom932">
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false"><span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#" th:href="@{/}"><img src="/assets/img/flogo.png" alt="FLogo"></a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav"></ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#" th:href="@{/}">Home</a></li>
-                    <li><a href="#" th:href="@{/topics/new}">Ask Question</a></li>
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                            aria-haspopup="true" aria-expanded="false">Question <span
-                            class="caret"></span></a>
-                        <ul class="dropdown-menu animated zoomIn">
-                            <li><a href="category.html">Question Category</a></li>
-                            <li><a href="category.html">HTML</a></li>
-                            <li><a href="category.html">CSS</a></li>
-                            <li><a href="category.html">Javascript</a></li>
-                            <li><a href="category.html">Bootstrap</a></li>
-                        </ul>
-                    </li>
-
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                            aria-haspopup="true" aria-expanded="false">Blog <span class="caret"></span></a>
-                        <ul class="dropdown-menu animated zoomIn">
-                            <li><a href="blog.html">Blog </a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                            aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
-                        <ul class="dropdown-menu animated zoomIn">
-                            <li><a href="log_in.html">Login</a></li>
-                            <li><a href="contact_us.html"> Contact Us</a></li>
-                            <li><a href="#" th:href="@{/topics/new}"> Ask Question </a></li>
-                            <li><a href="post_details.html"> Post-Details </a></li>
-                            <li><a href="user.html">All User</a></li>
-                            <li><a href="../templates/user_question.html"> User Question </a></li>
-                            <li><a href="category.html"> Category </a></li>
-                            <li><a href="#"> 404 </a></li>
-                        </ul>
-                    </li>
-                    <li><a href="contact_us.html">Contact us</a></li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-</div>
+<div th:replace="fragments/navbar :: navbar"></div>
 
 
 <section class="header-descriptin329">
@@ -246,23 +159,7 @@
                     </div>
                 </div>
                 <!--          start tags part-->
-                <div class="tags-part2398">
-                    <h4>Tags</h4>
-                    <ul>
-                        <li><a href="#">analytics</a></li>
-                        <li><a href="#">Computer</a></li>
-                        <li><a href="#">Developer</a></li>
-                        <li><a href="#">Google</a></li>
-                        <li><a href="#">Interview</a></li>
-                        <li><a href="#">Programmer</a></li>
-                        <li><a href="#">Salary</a></li>
-                        <li><a href="#">University</a></li>
-                        <li><a href="#">Employee</a></li>
-
-                    </ul>
-
-
-                </div>
+                <div th:replace="fragments/tags_sidebar :: sidetags"></div>
                 <!--          End tags part-->
 
             </aside>
@@ -271,109 +168,11 @@
 </section>
 
 <!--    footer -->
-<section class="footer-part">
-    <div class="container">
-        <div class="row">
+<div th:replace="fragments/footer :: footer"></div>
 
-            <div class="col-md-3">
-                <div class="info-part-one320">
-                    <h4>Where We Are ?</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi adipiscing gravida odio, sit amet
-                        suscipit risus ultrices eu.</p>
-                    <h4>Address :</h4>
-                    <p>Ask Me Network, 33 Street, syada<br> Zeinab, Cairo, Egypt.</p>
-                    <h4>Support :</h4>
-                    <p>Support Telephone No : (+2)01111011110</p>
-                    <p>Support Email Account : </p>
-                    <p>info@example.com</p>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="info-part-two320">
-                    <h4>Quick Links</h4>
-                    <a href="#" th:href="@{/}"><p>-Home</p></a>
-                    <a href="#"><p>-Ask Question</p></a>
-                    <a href="#"><p>-Questions</p></a>
-                    <a href="#"><p>-Users</p></a>
-                    <a href="#"><p>-Edit Profile</p></a>
-                    <a href="#"><p>-Page</p></a>
-                    <a href="#"><p>-Contact Us</p></a>
-                    <a href="#"><p>-Buy now</p></a>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="info-part-three320">
-                    <h4>Popular Questions</h4>
-                    <div class="news-info209">
-
-                        <h5>Why are the British confused</h5>
-                        <p>(Why I darest say, they darest not get offended when they so ...</p>
-                        <small>July 16, 2017</small>
-                    </div>
-                    <div class="news-info209">
-                        <h5>How to approach applying for</h5>
-                        <p>(I am trying to find/change my career trajectory. Its a good cozy ...</p>
-                        <small>July 16, 2017</small>
-                    </div>
-                    <div class="news-info209">
-                        <h5>How to evaluate whether a</h5>
-                        <p>A friend of mine is the CEO of his own small business. ...</p>
-                        <small>July 16, 2017</small>
-                    </div>
-
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="info-part-four320">
-                    <h4>Latest Tweets</h4>
-                    <div class="tweet-details29">
-                        <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a href="#"> codeThemesCheck a new
-                            update #AskMe #ThemeForest #WordPress #2code #Envato#2code
-                            Themehttps://t.co/urb3LgsOCi</a></p>
-                        <small>about 2 weeks ago</small>
-                    </div>
-                    <div class="tweet-details29">
-                        <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a href="#"> codeThemesCheck a new
-                            update #AskMe #ThemeForest #WordPress #2code #Envato#2code
-                            Themehttps://t.co/urb3LgsOCi</a></p>
-                        <small>about 2 weeks ago</small>
-                    </div>
-                    <div class="tweet-details29">
-                        <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a href="#"> codeThemesCheck a new
-                            update #AskMe #ThemeForest #WordPress #2code #Envato#2code
-                            Themehttps://t.co/urb3LgsOCi</a></p>
-                        <small>about 2 weeks ago</small>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="footer-social">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <p>Copyright 2023 - Sex forums | <strong>Team 10 @ Telerik A48 Java Cohort</strong></p>
-            </div>
-            <div class="col-md-6">
-                <div class="social-right2389">
-                    <a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="../static/js/jquery-3.1.1.min.js"></script>
 <script src="../static/js/bootstrap.min.js"></script>
-<script src="../static/js/npm.js"></script>
 </body>
 
 </html>
