--- a/src/main/resources/templates/log_in.html
+++ b/src/main/resources/templates/log_in.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+<div th:replace="fragments/navbar :: navbar"></div>
 
 <div class="modal-wrap">
 
@@ -35,6 +36,7 @@
         </div>
     </div>
 </div>
+
 <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
 
 
