--- a/src/main/resources/templates/post_details.html
+++ b/src/main/resources/templates/post_details.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <title>Edit post details</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,104 +24,8 @@
 </head>
 
 <body>
-<div class="top-bar">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="navbar-menu-left-side239">
-                    <ul>
-                        <li><a href="mailto:telerikforums@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a></li>
-                        <li><a href="#"><i class="fa fa-headphones" aria-hidden="true"></i>Support</a></li>
-                        &nbsp;
-                        <!-- Use Thymeleaf expression to check if the user is logged in -->
-                        <li>
-                            <!-- If the currentUser session attribute is not null, display the logout link -->
-                            <a th:href="@{/auth/logout}" th:if="${session.currentUser} != null">
-                                <i class="fa fa-sign-out" aria-hidden="true"></i>Logout
-                            </a>
-                            &nbsp;
-                            <!-- If the currentUser session attribute is null, display the login link -->
-                            <a th:href="@{/auth/login}" th:if="${session.currentUser} == null">
-                                <i class="fa fa-user" aria-hidden="true"></i>&nbsp;Login Area
-                            </a>
-                            <!-- Display the username if the user is logged in -->
-                            <span th:text="${session.currentUser}" th:if="${session.currentUser} != null"></span>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="navbar-serch-right-side">
-                    <form class="navbar-form" role="search">
-                        <div class="input-group add-on">
-                            <label for="srch-term"></label>
-                            <input class="form-control form-control222" placeholder="Search" id="srch-term" type="text">
-                            <div class="input-group-btn">
-                                <button class="btn btn-default btn-default2913" type="button" th:field="*{title}"><i class="glyphicon glyphicon-search"></i></button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="top-menu-bottom932">
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false"><span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#" th:href="@{/}"><img src="/assets/img/flogo.png" alt="FLogo"></a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav"></ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#" th:href="@{/}">Home</a></li>
-                    <li><a href="ask_question.html">Ask Question</a></li>
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                            aria-haspopup="true" aria-expanded="false">Question <span
-                            class="caret"></span></a>
-                        <ul class="dropdown-menu animated zoomIn">
-                            <li><a href="category.html">Question Category</a></li>
-                            <li><a href="category.html">HTML</a></li>
-                            <li><a href="category.html">CSS</a></li>
-                            <li><a href="category.html">Javascript</a></li>
-                            <li><a href="category.html">Bootstrap</a></li>
-                        </ul>
-                    </li>
+<div th:replace="fragments/navbar :: navbar"></div>
 
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                            aria-haspopup="true" aria-expanded="false">Blog <span class="caret"></span></a>
-                        <ul class="dropdown-menu animated zoomIn">
-                            <li><a href="blog.html">Blog </a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                            aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
-                        <ul class="dropdown-menu animated zoomIn">
-                            <li><a href="log_in.html">Login</a></li>
-                            <li><a href="contact_us.html"> Contact Us</a></li>
-                            <li><a href="ask_question.html"> Ask Question </a></li>
-                            <li><a href="post_details.html"> Post-Details </a></li>
-                            <li><a href="user.html">All User</a></li>
-                            <li><a href="#"> User Question </a></li>
-                            <li><a href="#"> Category </a></li>
-                            <li><a href="#"> 404 </a></li>
-                        </ul>
-                    </li>
-                    <li><a href="contact_us.html">Contact us</a></li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-</div>
 <section class="header-descriptin329">
     <div class="container">
         <h3>Post Details</h3>
@@ -159,7 +64,7 @@
                         </div>
                     </div>
                     <div class="post-details-info1982">
-                        <p th:utext="${topic.getContent()}"/>
+                        <p th:utext="${topic.getContent()}"></p>
                         <hr>
                         <div class="post-footer29032">
                             <div class="l-side2023">
@@ -247,21 +152,7 @@
                     <h3>Leave A Reply</h3>
                     <hr>
                     <div class="row">
-                        <div class="col-md-4">
-                            <div class="replay-input-name42389">
-                                <p>Name*</p>
-                                <input type="text" class="name-box24894 input238-design" placeholder="Name"></div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="replay-email-input89298">
-                                <p>E-mail*</p>
-                                <input type="text" class="name-box24894 input238-design" placeholder="E-mail"></div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="replay-input-websit128923">
-                                <p>Website*</p>
-                                <input type="text" class="name-box24894 input238-design" placeholder="Website"></div>
-                        </div>
+<!--                        You are commenting as **** part here -->
                         <div class="col-md-12">
                             <div class="post9320-box">
                                 <input type="text" class="comment-input219882" placeholder="Enter your comment here..."></div>
@@ -404,126 +295,18 @@
                 </div>
                 <!--               end of Highest points -->
                 <!--          start tags part-->
-                <div class="tags-part2398">
-                    <h4>Tags</h4>
-                    <ul>
-                        <li th:each="tag : ${tags}">
-                            <a href="#" th:href="@{/tags/{id}(id=${tag.getId()})}" th:text="${tag.getName()}"></a>
-                        </li>
-                    </ul>
-                </div>
-                <hr>
+                <div th:replace="fragments/tags_sidebar :: sidetags"></div>
                 <!--          End tags part-->
                </aside>
         </div>
     </div>
 </section>
 <!--    footer -->
-<section class="footer-part">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <div class="info-part-one320">
-                    <h4>Where We Are ?</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi adipiscing gravida odio, sit amet
-                        suscipit risus ultrices eu.</p>
-                    <h4>Address :</h4>
-                    <p>Ask Me Network, 33 Street, syada
-                        <br> Zeinab, Cairo, Egypt.</p>
-                    <h4>Support :</h4>
-                    <p>Support Telephone No : (+2)01111011110</p>
-                    <p>Support Email Account : </p>
-                    <p>info@example.com</p>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="info-part-two320">
-                    <h4>Quick Links</h4>
-                    <a href="#" th:href="@{/}">
-                        <p>-Home</p>
-                    </a>
-                    <a href="#">
-                        <p>-Ask Question</p>
-                    </a>
-                    <a href="#">
-                        <p>-Questions</p>
-                    </a>
-                    <a href="#">
-                        <p>-Users</p>
-                    </a>
-                    <a href="#">
-                        <p>-Edit Profile</p>
-                    </a>
-                    <a href="#">
-                        <p>-Page</p>
-                    </a>
-                    <a href="#">
-                        <p>-Contact Us</p>
-                    </a>
-                    <a href="#">
-                        <p>-Buy now</p>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="info-part-three320">
-                    <h4>Popular Questions</h4>
-                    <div class="news-info209">
-                        <h5>Why are the British confused</h5>
-                        <p>(Why I darest say, they darest not get offended when they so ...</p> <small>July 16,
-                        2017</small></div>
-                    <div class="news-info209">
-                        <h5>How to approach applying for</h5>
-                        <p>(I am trying to find/change my career trajectory. Its a good cozy ...</p> <small>July 16,
-                        2017</small></div>
-                    <div class="news-info209">
-                        <h5>How to evaluate whether a</h5>
-                        <p>A friend of mine is the CEO of his own small business. ...</p> <small>July 16, 2017</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="info-part-four320">
-                    <h4>Latest Tweets</h4>
-                    <div class="tweet-details29">
-                        <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a href="#"> codeThemesCheck a new
-                            update #AskMe #ThemeForest #WordPress #2code #Envato#2code
-                            Themehttps://t.co/urb3LgsOCi</a></p> <small>about 2 weeks ago</small></div>
-                    <div class="tweet-details29">
-                        <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a href="#"> codeThemesCheck a new
-                            update #AskMe #ThemeForest #WordPress #2code #Envato#2code
-                            Themehttps://t.co/urb3LgsOCi</a></p> <small>about 2 weeks ago</small></div>
-                    <div class="tweet-details29">
-                        <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a href="#"> codeThemesCheck a new
-                            update #AskMe #ThemeForest #WordPress #2code #Envato#2code
-                            Themehttps://t.co/urb3LgsOCi</a></p> <small>about 2 weeks ago</small></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="footer-social">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <p>Copyright 2017 Ask me | <strong>Sudo Coder</strong></p>
-            </div>
-            <div class="col-md-6">
-                <div class="social-right2389"><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a> <a
-                        href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a> <a href="#"><i
-                        class="fa fa-google-plus" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-youtube"
-                                                                                             aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-linkedin"
-                                                                                                  aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></div>
-            </div>
-        </div>
-    </div>
-</section>
+<div th:replace="fragments/footer :: footer"></div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="../static/js/jquery-3.1.1.min.js" th:href="@{/js/jquery-3.1.1.min.js}"></script>
 <script src="../static/js/bootstrap.min.js" th:href="@{/js/bootstrap.min.js}"></script>
-<script src="../static/js/npm.js" th:href="@{/js/npm.js}"></script>
 </body>
 
 </html>
